# InfoScreen

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  DisplayImage.hpp  ImageObject.cpp  ImageObject.hpp  InfoScreen  LICENSE.md  README.md  log.txt  main.cpp  main.hpp  settings.h
lib/: ImageObject.hpp
set/: settings.h
src/: ImageObject.cpp  main.cpp
